--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Cooper_Assign2</string>
     <string name="txtTitle">Edit Students and Teachers</string>
+    <string name="btnTeachers">Teachers</string>
+    <string name="btnStudents">Students</string>
 </resources>
