--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Cooper_Assign2</string>
-    <string name="txtTitle">Edit Students and Teachers</string>
+    <string name="app_name">BOCES</string>
+    <string name="txtEditTitle">Edit Students and Teachers</string>
     <string name="btnTeachers">Teachers</string>
     <string name="btnStudents">Students</string>
     <string name="txtFirstName">First Name</string>
@@ -15,4 +15,13 @@
     <string name="txtPhone">Phone Number</string>
     <string name="txtAddTeacher">Add Teacher</string>
     <string name="txtRemoveTeacher">Remove Teacher</string>
+    <string name="txtMainTitle">WELCOME! \n Please Sign In!</string>
+    <string name="btnAdminStudents">Edit Students</string>
+    <string name="btnAdminTeachers">Edit Teachers</string>
+    <string name="btnAdminTasks">Edit Tasks</string>
+    <string name="txtSelectTeacher">Select your teacher: </string>
+    <string name="txtSelectSelf">Select yourself: </string>
+    <string name="txtSelectTask">Select the task you will be completing: </string>
+    <string name="btnClockIn">Clock in</string>
+    <string name="btnAdminReport">Generate Report</string>
 </resources>
