--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="lblTimerDefault">00:00:00</string>
     <string name="lblTimerLabel">Time spent on current task:</string>
     <string name="btnClockOut">Clock Out</string>
+    <string name="btnGenerateReport">Generate Report</string>
+    <string name="btnSelectStudent">Select by Student</string>
+    <string name="btnSelectTeacher">Select by Teacher</string>
+    <string name="txtSelectATeacher">Select a Teacher</string>
 </resources>
