--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="btnAdminLog">Admin Login</string>
     <string name="btnAddTask">Add Task</string>
     <string name="btnRemoveTask">Remove Task</string>
-    <string name="btnEditTask">Edit Task</string>
+    <string name="btnEdit">Edit</string>
     <string name="txtClockedInTitle">You are currently clocked in</string>
     <string name="lblTimerDefault">00:00:00</string>
     <string name="lblTimerLabel">Time spent on current task:</string>
