--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,10 @@
     <string name="btnSelectStudent">Select by Student</string>
     <string name="btnSelectTeacher">Select by Teacher</string>
     <string name="txtSelectATeacher">Select a Teacher</string>
+    <string name="txtSelectAStudent">Select a Student</string>
+    <string name="txtSelectATask">Select a Task</string>
+    <string name="btnSave">Save</string>
+    <string name="btnCancel">Cancel</string>
+    <string name="txtPhoneNum">Phone</string>
+    <string name="txtStudentID">Student ID</string>
 </resources>
